Fix Browse and minor header spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1031,7 +1031,7 @@ body a{
 	-o-background-size: cover;
 	min-height:800px;
 	text-align: center;
-	padding-top:1em;
+	padding-top:2em;
 }
 .header_top_left{
 	float:left;
@@ -2058,7 +2058,7 @@ ul.social li a i.tw{
 	-o-background-size: cover;
 	min-height:225px;
 	text-align: center;
-	padding-top: 3em;
+	padding-top: 2em;
   margin-bottom: 1em;
 }
 .sidebar_men {
@@ -3152,7 +3152,7 @@ ul.content-home li .item-html button {
 }
 .banner {
 	min-height:600px;
-	padding-top: 2em;
+	padding-top: 3em;
 }
 .field_content {
 	top: 12em;
@@ -3561,7 +3561,7 @@ i.user {
 @media (max-width:375px){
 .banner {
 	min-height:200px;
-	padding-top:1em;
+	padding-top:2em;
 }
 .header_top_left {
   float: none;
